// Note: This file was copied from the server side project (only the namespace was updated)
syntax = "proto3";

option csharp_namespace = "RestVsGRPCTestClient";

package EchoTest;

service EchoTester {
  // Echo the request
  rpc Echo (EchoRequestDTO) returns (EchoResponseDTO);
}

// request message
message EchoRequestDTO {
    repeated BookDTO Books = 1;
}

// response message
message EchoResponseDTO {
    repeated BookDTO Books = 1;
}

message BookDTO {
    string title = 1;
    string author = 2;
}